fix for replication mode

--- a/molecule/custom-datadir/group_vars/all/vars.yml
+++ b/molecule/custom-datadir/group_vars/all/vars.yml
@@ -1,6 +1,11 @@
 ---
 
-mariadb_root_password: Y5FZfKXzCeOWGf4kBOiFSp6Il
+mariadb_system_users:
+  - username: root
+    password: Y5FZfKXzCeOWGf4kBOiFSp6Il
+    home: /root
+    update: true
+    ignore: false
 
 mariadb_databases:
   - name: molecule
