--- a/molecule/mariadb-10.4/group_vars/all/vars.yml
+++ b/molecule/mariadb-10.4/group_vars/all/vars.yml
@@ -3,7 +3,12 @@
 mariadb_use_external_repo: true
 mariadb_version: 10.4
 
-mariadb_root_password: "Y5FZfKXzCeOWGf4kBOiFSp6Il--XXX"
+mariadb_system_users:
+  - username: root
+    password: Y5FZfKXzCeOWGf4kBOiFSp6Il--XXX
+    home: /root
+    update: true
+    ignore: false
 
 mariadb_monitoring:
   enabled: false
