--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -4,19 +4,15 @@ name: push to ansible galaxy
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows:
-      - "CI"
-    branches:
-      - main
-    types:
-      - completed
+  push:
+    tags:
+      - '*'
 
 jobs:
   galaxy:
     name: galaxy
     runs-on: ubuntu-22.04
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v4
