--- a/tasks/install/python-support.yml
+++ b/tasks/install/python-support.yml
@@ -4,6 +4,7 @@
   when:
     - mariadb_python_packages is defined
     - mariadb_python_packages | length > 0
+    - not ansible_check_mode
   block:
     - name: create pip requirements file
       bodsch.core.pip_requirements:
